fix comment error and remove author

--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -27,7 +27,5 @@ layout: default
 
     <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
   {%- endif -%}
-
 </div>
-
-/* from https://github.com/joereddington/joereddington.github.io/blob/main/index.md */
+<!-- from https://github.com/joereddington/joereddington.github.io/blob/main/index.md */ -->
