fix bugs, add bitlink link to newest post

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
           </p>
         </div>
         <div class="footer-col">
-          <p>{{ site.description | escape }}</p>
+          <p> Get the latest posts delivered straight to your email</p>
         </div>
       </div>
   
