--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
       <div class="footer-col-wrapper">
         <div class="footer-col">
           <p class="feed-subscribe">
-            <a href="http://tinyletter.com/foreverlearning"> Subscribe to newsletter
+            <a href="http://tinyletter.com/foreverlearning"> Subscribe to the newsletter
             </a>
           </p>
         </div>
